--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Arena Breakout: Infinite - Contacts Exchange Cheatsheet",
+  "name": "Arena Breakout: Infinite - Contacts Exchange Cheatsheet",
   "icons": [
     {
       "src": "favicon.ico",
